add modified finish project